complete printing!
